<resources>

    <string name="tianyi_forumaddress">http://www.baidu.com</string>
    <string name="tianyi_email_detail">客服邮箱:\ndhxyj_gm@staff.tianyi.com</string>
    <string name="tianyi_qq">客服QQ:\n2369324651</string>
    <string name="tianyi_phone_detail">客服电话:\n0755-83279217</string>

    <string name="tianyi_selecthistoricalaccount">请选择账号</string>
    <string name="tianyi_customercenter">客户服务中心</string>
    <string name="tianyi_dialog_tips">本地找不到已绑定手机的账号</string>
    <string name="tianyi_customercenter_close">关闭</string>
    <string name="tianyi_cs">客服</string>
    <string name="tianyi_forum">论坛</string>
    <string name="tianyi_selectaccount">选择一个账号</string>
    <string name="tianyi_email">客服邮箱:\n</string>
    <string name="tianyi_phone">客服电话:\n</string>
    <string name="tianyi_clicktocontact">点击联系...</string>
    <string name="tianyi_emailsending">发送邮件中</string>
    <string name="tianyi_emailsendingexception">发送邮件异常</string>
    <string name="tianyi_qqexception">QQ启动异常</string>
    <string name="tianyi_emailsendingexception_noapp">您没有安装发送邮件的应用</string>
    <string name="tianyi_qqexception_noapp">您没有安装QQ</string>
    <string name="tianyi_customercenter_confirm">确定</string>
    
    <string name="tianyi_application_name">天易支付</string>
    <string name="tianyi_mainactivity_name">天易支付 演示界面</string>
    <string name="tianyi_please_enter_name">在此输入用户名</string>
    <string name="tianyi_select_anotheraccount">长按选择已有账号</string>
    <string name="tianyi_please_enter_password">在此输入密码</string>
    <string name="tianyi_is_creating_order">正在创建订单</string>
    <string name="tianyi_order_creating_fail">创建订单失败，请重试</string>
    <string name="tianyi_paying_tips">正在支付</string>
    <string name="tianyi_pay_success_tips">支付成功</string>
    <string name="tianyi_pay_notconfirm_tips">在等待确认支付结果，请稍后查收元宝</string>
    <string name="tianyi_pay_fail_tips">支付失败</string>
    <string name="tianyi_pay_submitfail_tips">支付失败，请检查：\n1，卡号、密码是否正确，卡是否有效；\n2，卡面额是否等于支付金额。</string>
    <string name="tianyi_yuan">元</string>
    <string name="tianyi_registering">正在注册</string>
    <string name="tianyi_register_fail">注册失败</string>
    <string name="tianyi_autoregister_fail">自动注册失败</string>
    <string name="tianyi_login">登录</string>
    <string name="tianyi_logining">正在登录中</string>
    <string name="tianyi_login_success">登录成功</string>
    <string name="tianyi_login_fail">登录失败</string>
    <string name="tianyi_card_pay_title">支付</string>
    <string name="tianyi_changepassword_title">修改密码</string>
    <string name="tianyi_payment_center">支付中心</string>
    <string name="tianyi_user_center">用户中心</string>
    <string name="tianyi_bindphone">绑定手机</string>
    <string name="tianyi_find_password">找回密码</string>
    <string name="tianyi_find_password_tips">验证绑定的手机号码,快速轻松找回密码!</string>
    <string name="tianyi_register">注册</string>
    <string name="tianyi_go2register">前往注册</string>
	<string name="tianyi_account_name_null">账号</string>
	<string name="tianyi_account">用户</string>
	<string name="tianyi_account_name">用户名：</string>
	<string name="tianyi_card_amount">支付金额：</string>
	<string name="tianyi_usercenter_bindphonetips">暂无绑定手机</string>
	<string name="tianyi_original_password">原密码：</string>
	<string name="tianyi_register_new_account">注册账号</string>
	<string name="tianyi_payment_history">支付记录</string>
	<string name="tianyi_reset_password">重置密码</string>
	<string name="tianyi_reset_password_immidiately">立即重置密码</string>
	<string name="tianyi_change_password">修改密码</string>
	<string name="tianyi_bind_phone">绑定手机号码</string>
	<string name="tianyi_unbind_phone">解除绑定</string>
	<string name="tianyi_relogin">切换账号</string>
	<string name="tianyi_current_account_name">当前账号</string>
	<string name="tianyi_current_bind_phone">绑定手机</string>
	<string name="tianyi_payment_tips">请选择以下支付方式进行支付</string>
	<string name="tianyi_payment_product">交易信息</string>
	<string name="tianyi_payment_account">当前登录账号</string>
	<string name="tianyi_usercenter_register">注册与登录</string>
	<string name="tianyi_usercenter_security">安全</string>
	<string name="tianyi_usercenter_historypay">支付记录</string>
	<string name="tianyi_account_password">密码：</string>
	<string name="tianyi_card_password">密码：</string>
	<string name="tianyi_card_number">卡号：</string>
	<string name="tianyi_new_password">新密码：</string>
	<string name="tianyi_product_name">商品</string>
	<string name="tianyi_product_price">价格</string>
	<string name="tianyi_register_by_one_second">1键注册</string>
	<string name="tianyi_button_cancel">取消</string>
	<string name="tianyi_button_confirm">确定</string>
	<string name="tianyi_account_login_title">登录</string>
	<string name="tianyi_button_submit">提交</string>
	<string name="tianyi_account_login_tip_forget_password">忘记密码？</string>
	<string name="tianyi_account_login_click_to_find">点击这里重置</string>
	<string name="tianyi_account_register_quick_tip">您可以使用系统为您默认分配的用户名，也可以输入邮箱、小写字母/数字作为用户名。注册成功后将自动使用当前注册的账号登录。</string>
	<string name="tianyi_account_register_tip_account">通行证：</string>
	<string name="tianyi_account_register_hint_account">小写字母、数字、邮箱</string>
	<string name="tianyi_account_register_tip_nickname">昵称：</string>
	<string name="tianyi_account_register_hint_nickname">10字以内</string>
	<string name="tianyi_account_register_tip_password">密码：</string>
	<string name="tianyi_account_register_hint_password">限6–12个字母、数字哦</string>
	<string name="tianyi_account_register_agreement">我已阅读并同意遵守服务条款</string>
	<string name="tianyi_loading_message">正在登录中</string>
	<string name="tianyi_lschangingpassword">正在修改密码</string>
	<string name="tianyi_changepassword_ok">修改密码成功</string>
	<string name="tianyi_changepassword_fail">修改密码失败</string>
	
	
	<string name="tianyi_account_bind_tips">绑定手机号码保障账号安全,享受更多贴心服务！绑定手机后，如果您忘记密码，可以通过绑定的手机号码重置密码。一个手机号码只能绑定一个账号。</string>
	<string name="tianyi_card_pay_tips">各种注意事项描述</string>
	<string name="tianyi_account_unbind_tips">点击获取验证码，您当前的手机将收到验证码，输入验证码后点击解除绑定即可解除当前绑定的手机!</string>
	<string name="tianyi_reset_password_tips">通过您绑定的手机号码找回您的密码!</string> 
	<string name="tianyi_bind_phone_number_gain_code">获取验证码</string> 
	<string name="tianyi_bind_phone_isbindingphone">正在绑定手机</string> 
	<string name="tianyi_bind_phone_isresettingpassword">正在重置密码</string> 
	<string name="tianyi_bind_phone_reset_ok">重置密码成功</string> 
	<string name="tianyi_bind_phone_reset_fail">重置密码失败</string> 
	<string name="tianyi_bind_phone_isbindingok">绑定成功</string> 
	<string name="tianyi_bind_phone_isbinding_notok">绑定失败</string> 
	<string name="tianyi_bind_phone_isgettingcode">正在获取验证码</string> 
	<string name="tianyi_bind_phone_getcode_fail">获取验证码失败</string> 
	<string name="tianyi_bind_phone_number_enter_code_tip">请输入短信验证码</string>
	<string name="tianyi_resetpassword_enterusername_tip">请输入用户名</string>
	<string name="tianyi_bind_phone_number_enter_newpassword_tip">请输入新密码</string> 
	<string name="tianyi_bind_phone_number_bind">立即绑定手机</string>
	<string name="tianyi_bind_phone_number_unbind">解除绑定</string>
	<string name="tianyi_bind_phone_number_isunbinding">正在解除绑定</string>
	<string name="tianyi_bind_phone_number_unbind_ok">解除绑定成功</string>
	<string name="tianyi_bind_phone_number_unbind_fail">解除绑定失败</string>
	<string name="tianyi_unbind">未绑定</string>
	<string name="tianyi_find_password_button">找回密码</string>
	<string name="tianyi_bind_phone_reason">温馨提示：</string>  
	<string name="tianyi_bind_phone_reason1">1. 手机号码仅作为身份验证,我们不会收取任何费用,请放心使用；</string> 
	<string name="tianyi_bind_phone_reason2">2. 我们承诺保障您的隐私权益,不会泄露您的手机号码。</string> 
	<string name="tianyi_resetpassword_tips1">1. 只有绑定了手机号码的账号才能重置密码，输入没有绑定手机号码的账号会导致获取验证码失败；</string> 
	<string name="tianyi_resetpassword_tips2">2. 长按选择已有账号时，只会列示在当前手机登录过的并绑定了手机号码的账号。</string> 
	<string name="tianyi_set_password_password_hint">限6–12个字母、数字</string>
	<string name="tianyi_cannotbind_tip">您还没有绑定手机，无法重置密码！</string> 
	<string name="tianyi_bind_phone_number_enter_number_tip">请输入手机号码</string>
	
	<string name="tianyi_test_amount_hint">请输入支付金额</string>
	<string name="tianyi_test_amount">0.01</string>
	
	<string name="tianyi_payment_type_shengpay">盛付通</string>
	<string name="tianyi_payment_type_unionpay">银联</string>
	<string name="tianyi_payment_type_alipayquick">支付宝</string>
	
	<string name="tianyi_card_no_support_tips">不支持%1$s元面额的%2$s充值卡，请使用其它支付方式</string>
	
	<string name="tianyi_dianxin">电信充值卡</string>
	<string name="tianyi_dianxin_tip">1. 全国电信卡的卡号为19 位，密码为18 位。\n2. 卡面值必须与支付金额一致，否则将可能导致支付不成功或支付金额丢失。</string>
	<string name="tianyi_yidong">移动充值卡</string>
	<string name="tianyi_yidong_tip">1. 全国移动卡的序列号为17 位，密码为18 位。\n江苏：本地序列号为16位的移动充值卡、\n福建：本地的刮刮通充值卡\n辽宁：本地序列号16位的移动充值卡\n浙江：本地的移动电子缴费券\n2. 卡面值必须与支付金额一致，否则将可能导致支付不成功或支付金额丢失。</string>
	<string name="tianyi_liantong">联通充值卡</string>
	<string name="tianyi_liantong_tip">1. 全国联通卡的卡号为15 位，密码为19 位。2. 卡面值必须与支付金额一致，否则将可能导致支付不成功或支付金额丢失。</string>
	<string name="tianyi_shengfutong">盛付通卡</string>
	<string name="tianyi_shengfutong_tip">1. 卡号由前五位为80133 的16 位纯数字组成，卡密为8 位。\n2. 盛付通卡支持单卡多次支付，直至卡内余额为零。</string>
	<string name="tianyi_shengfutongyuleyikatong">盛付通娱乐一卡通</string>
	<string name="tianyi_shengfutongyuleyikatong_tip">盛付通娱乐一卡通</string>
	<string name="tianyi_shengdaka">盛大卡</string>
	<string name="tianyi_shengdaka_tip">1. 盛大卡（包含盛大互动娱乐卡等）是盛大全国范围内发行的网络游戏充值卡，卡号是由CS、S、YC、YD 等开头的15 位字符组成，卡密为8 位。\n2. 盛大卡支持单卡多次和多卡组合支付，直至卡内余额为零。</string>
	<string name="tianyi_tecent">腾讯Q币卡</string>
	<string name="tianyi_tecent_tip">1. 支持的Q 币卡的卡号为9 位，密码为12 位。\n2. 卡面值必须与支付金额一致，否则将可能导致支付不成功或支付金额丢失。</string>
	<string name="tianyi_tianxiayikatong">天下一卡通</string>
	<string name="tianyi_tianxiayikatong_tip">1. 天下一卡通的卡号为15 位，密码为8 位（只能使用通用卡，请注意您的卡的类型）。\n2. 卡面值必须与支付金额一致，否则将可能导致支付不成功或支付金额丢失。</string>
	<string name="tianyi_jiuyouyikatong">久游一卡通</string>
	<string name="tianyi_jiuyouyikatong_tip">1. 久游一卡通的卡号为13 位，密码为10 位。\n2. 卡面值必须与支付金额一致，否则将可能导致支付不成功或支付金额丢失。</string>
	<string name="tianyi_wanmeiyikatong">完美一卡通</string>
	<string name="tianyi_wanmeiyikatong_tip">1. 完美一卡通为卡号10 位，密码15 位。\n2. 卡面值必须与支付金额一致，否则将可能导致支付不成功或支付金额丢失。</string>
	<string name="tianyi_souhuyikatong">搜狐一卡通</string>
	<string name="tianyi_souhuyikatong_tip">1. 搜狐一卡通为卡号20 位，密码12 位。\n2. 卡面值必须与支付金额一致，否则将可能导致支付不成功或支付金额丢失。</string>
	<string name="tianyi_guangyuyikatong">光宇一卡通</string>
	<string name="tianyi_guangyuyikatong_tip">1. 光宇一卡通的卡号为20 位，密码为9 位。\n2. 卡面值必须与支付金额一致，否则将可能导致支付不成功或支付金额丢失。</string>
	<string name="tianyi_wangyiyikatong">网易一卡通</string>
	<string name="tianyi_wangyiyikatong_tip">1. 网易一卡通为卡号13 位，密码9 位。\n2. 卡面值必须与支付金额一致，否则将可能导致支付不成功或支付金额丢失。</string>
	<string name="tianyi_zongyouyikatong">纵游一卡通</string>
	<string name="tianyi_zongyouyikatong_tip">1. 纵游一卡通是卡号和密码均为15 位。\n2. 卡面值必须与支付金额一致，否则将可能导致支付不成功或支付金额丢失。</string>
	<string name="tianyi_tianhongyikatong">天宏一卡通</string>
	<string name="tianyi_tianhongyikatong_tip">1. 天宏一卡通旧卡是序列号10 位、密码10 位；新卡是序列号12 位、密码15 位。\n2. 卡面值必须与支付金额一致，否则将可能导致支付不成功或支付金额丢失。</string>
	<string name="tianyi_junwangyikatong">骏网一卡通</string>
	<string name="tianyi_junwangyikatong_tip">1. 支持所有骏网非专属卡，卡号16 位，密码16 位。\n2. 卡面值必须与支付金额一致，否则将可能导致支付不成功或支付金额丢失。</string>
	<string name="tianyi_zhengtouyikatong">征途一卡通</string>
	<string name="tianyi_zhengtouyikatong_tip">1. 征途一卡通卡号为16 位，密码为8 位。\n2. 卡面值必须与支付金额一致，否则将可能导致支付不成功或支付金额丢失。</string>
	<string name="tianyi_lianhuaokka">联华OK卡</string>
	<string name="tianyi_lianhuaokka_tip">1. 支持联华OK 卡积点卡，序列号为10 位数字，密码为16 位数字。\n2. 卡面值必须与支付金额一致，否则将可能导致支付不成功或支付金额丢失。</string>
</resources>
